<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_package_bg">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_back"
            android:tint="@android:color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/gothic_bold"
            android:gravity="center"
            android:text="Premium Store"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtRestore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothic_bold"
            android:padding="10dp"
            android:text="@string/restore"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/in_app_remove_ads"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_ads" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/gothic"
                android:text="Remove Ads"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/remove_adds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/white_border"
                android:fontFamily="@font/gothic"
                android:padding="7dp"
                android:text="$ 0.99"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/in_app_text_color_bg"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_theme_bg" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/gothic"
                    android:text="@string/texual_color_background"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/white_border"
                android:fontFamily="@font/gothic"
                android:padding="7dp"
                android:text="$ 0.99"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/in_app_themes_slots"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_theme" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gothic"
                    android:text="@string/themes_slots"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/theme_slot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/white_border"
                android:fontFamily="@font/gothic"
                android:padding="7dp"
                android:text="$ 0.99"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/in_app_colors"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_color" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/gothic"
                    android:text="@string/colors"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/white_border"
                android:fontFamily="@font/gothic"
                android:padding="7dp"
                android:text="$ 0.99"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/in_app_fonts"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_aa" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/gothic"
                    android:text="@string/fonts"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/fonts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/white_border"
                android:fontFamily="@font/gothic"
                android:padding="7dp"
                android:text="$ 1.99"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/in_app_sounds"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_soundeffect_selected" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/gothic"
                    android:text="@string/sounds"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/sounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/white_border"
                android:fontFamily="@font/gothic"
                android:padding="7dp"
                android:text="$ 0.99"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.gms.ads.AdView
                android:id="@+id/ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:visibility="visible"
                app:adSize="BANNER"
                app:adUnitId="@string/banner_home_footer" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>