<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivWallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_wallpaper"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linWallpaper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/wallpaper_round"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_wallpaper_selected" />

            <com.ibl.apps.myphotokeyboard.utils.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallpaper"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivKeyDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_keydesign"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/linKeyDesign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/key_design_round"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keydesign_selected" />

            <com.ibl.apps.myphotokeyboard.utils.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key_design"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_font_style"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/linFontStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/font_round"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_font_style_selected" />

            <com.ibl.apps.myphotokeyboard.utils.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_style"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivSoundEffect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_soundeffect"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/linSoundEffect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/sound_effect_round"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_soundeffect_selected" />

            <com.ibl.apps.myphotokeyboard.utils.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_effect"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txtDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Demo text"
        android:textAlignment="center"
        android:textSize="30dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="3">

        <include
            android:id="@+id/linWallpaperLayout"
            layout="@layout/layout_wallpaper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:visibility="visible" />

        <include
            android:id="@+id/linKeyDesignLayout"
            layout="@layout/layout_key_design"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:visibility="gone" />

        <include
            android:id="@+id/linFontStyleLayout"
            layout="@layout/layout_font_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:visibility="gone" />

        <include
            android:id="@+id/linSoundEffectLayout"
            layout="@layout/layout_sound_effect"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:visibility="gone" />

        <include
            layout="@layout/layout_keyboard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3" />
    </LinearLayout>

</LinearLayout>



